correction error: horizontal scroll bar on >420px view

--- a/css/query.css
+++ b/css/query.css
@@ -5,30 +5,24 @@
         width: 100%;
         display: inline-block;
         margin:0;
-    }
-    
+    }    
     .row{
         margin: 0;
         font-size: 16px;
         width:100%;
     }
       img{
-        height: 18vh;
+        height: 12vh;
     }
        #lezioni .row > .right {
-        margin-left: 5%;
-        width:40%;
+
+        width:50%;
     }
-    #lezioni .row > .left{
-        margin-right: 5%;
-    }
+  
     #steps .row > .left, #steps .row > .central, #steps .row > .right {
         float: left;
-        width: 30%;
+        width: 33.333333%;
     }
-    #steps .row > .central{
-        margin:0 5%;
-    }   
 }
 /* / BONUS */
 
@@ -50,7 +44,7 @@
 
    /* Img style */
     img{
-      height: 20vh;
+      height: 10vh;
     }
     #why .row img {
         background-color: #428bca;
